upd ActionsInvoicePaidClientRepairStateTest